# lantern

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  Makefile  TODO.md
cmake/: OptimizeForArchitecture.cmake  SetSourceGroup.cmake
dev/: compile_shaders.bat  compile_shaders.sh
documentation/file_formats/lantern_model_file/: dragon_scene.json  lantern_model_file.adoc  nine_balls_scene.json  scene.schema.json  textured_cube_scene.json
libs/imgui/: CMakeLists.txt
libs/par/: CMakeLists.txt  par_shapes.cpp
libs/par/include/: par_shapes.h
scenes/: bitterli_dragon_scene.json  nine_balls_scene.json  scene.schema.json  stanford_dragon_scene.json  textured_cube_scene.json
scenes/models/: Mesh000.lmf  Mesh001.lmf  Mesh002.lmf  Mesh003.lmf  Mesh004.lmf  Mesh005.lmf  Mesh006.lmf  Mesh009.lmf  Mesh010.lmf  Mesh011.lmf  Mesh014.lmf  Mesh015.lmf
source/: CMakeLists.txt  main.cpp
source/bsdfs/: bsdf.h  ideal_specular_dielectric.h  lambert_bsdf.h  mirror_bsdf.h
source/camera/: atomic_frame_buffer.cpp  atomic_frame_buffer.h  pinhole_camera.cpp  pinhole_camera.h  reconstruction_filter.cpp  thin_lens_camera.cpp  thin_lens_camera.h
source/common/: atomic_frame_buffer.cpp  atomic_frame_buffer.h  global_args.h  mesh_elements.h  vector_types.h
source/core/: CMakeLists.txt
source/core/camera/: frame_buffer.cpp  frame_buffer.h  frame_data.cpp  frame_data.h  frame_data.isph  pinhole_camera.cpp  pinhole_camera.h  pinhole_camera.ispc  pinhole_camera.isph  reconstruction_filter.cpp  reconstruction_filter.h
source/core/frame_data/: frame_data.h
source/core/integrator/: integrator.cpp  integrator.h  integrator.ispc  surface_interaction.h
source/core/io/: file_io.h  lantern_model_file.cpp  lantern_model_file.h
source/core/materials/: bsdf.cpp  bsdf.h  bsdf_lobe.h  bsdf_math.h  material.h  matte.h
source/core/materials/bsdfs/: bsdf.h  ideal_specular_dielectric.h  lambert_bsdf.h  mirror_bsdf.h
source/core/materials/bxdfs/: ideal_specular_dielectric.h  lambert.h  mirror_bsdf.h
source/core/materials/media/: isotropic_scattering_medium.h  medium.h  non_scattering_medium.h
source/core/materials/textures/: constant_texture.h  image_texture.h  texture.h  uv_texture.h
source/core/math/: align.h  array.h  constants.h  float_math.h  linearspace4.h  math_const.h  ray.h  ray.isph  sampling.h  sampling.isph  types.h  types.isph  uniform_sampler.h  vector_math.cpp  vector_math.h  vector_types.h
source/core/primitives/: grid.cpp  grid.h  primitive.h  quad_mesh.cpp  quad_mesh.h  sphere.cpp  sphere.h  triangle_mesh.cpp  triangle_mesh.h  uniform_infinite_sphere.cpp  uniform_infinite_sphere.h
source/core/render_host/: presentation_buffer.h  render_host.cpp  render_host.h
source/core/renderer/: renderer.cpp  renderer.h  surface_interaction.h
source/core/scene/: area_light.cpp  area_light.h  geometry_generator.cpp  geometry_generator.h  image_cache.cpp  image_cache.h  json_parsing.cpp  light.h  mesh_elements.h  obj_loader.cpp  obj_loader.h  scene.cpp  scene.h  scene.ispc  scene.isph  sphere.cpp  sphere.h  sphere.ispc  sphere.isph
source/core/visualizer/: visualizer.cpp  visualizer.h  vulkan_function_loader.cpp
source/core/visualizer/shaders/: final_resolve_ps.glsl  final_resolve_ps.spv.h  fullscreen_triangle_vs.glsl  fullscreen_triangle_vs.spv.h
source/core/visualizer/tone_mappers/: clamp.h  filmic.h  reinhard.h  scaled_max_range.h
source/graphics/: atomic_frame_buffer.cpp  atomic_frame_buffer.h  frame_buffer.cpp  frame_buffer.h
source/lantern/: CMakeLists.txt  main.cpp
source/lmf_compiler/: CMakeLists.txt  main.cpp
source/materials/: lambert_material.h  material.h  mirror.h
source/materials/bsdfs/: bsdf.h  bsdf_lobe.h
source/materials/media/: medium.h  non_scattering_medium.h
source/materials/transmission_functions/: beer_lambert_transmission_function.h
source/math/: float_math.h  int_types.h  sampling.h  uniform_sampler.h  vector_math.h  vector_types.h
source/renderer/: renderer.cpp  renderer.h  surface_interaction.h
source/scene/: area_light.cpp  area_light.h  camera.cpp  camera.h  geometry_generator.cpp  geometry_generator.h  lambert_material.h  light.h  material.h  mesh_elements.h  mirror.h  obj_loader.cpp  obj_loader.h  ray.h  scene.cpp  scene.h  thin_lens_camera.cpp  thin_lens_camera.h
source/visualizer/: visualizer.cpp  visualizer.h
